infrastructure/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: air-quality-api
  labels:
      app: air-quality-api
  namespace: a-q-api
spec:
  replicas: 3
  selector:
    matchLabels:
        app: air-quality-api
        tier: aq-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
        maxSurge: 2
        maxUnavailable: 1
  template:
    metadata:
        labels:
            app: air-quality-api
            tier: aq-api
    spec:
      containers:
      - name: air-quality-api
        image: air-quality-api:latest
        ports:
        - containerPort: 5000
        readinessProbe:
            httpGet:
                path: /health
                port: 5000
            initialDelaySeconds: 60
            periodSeconds: 10
        livenessProbe:
            httpGet:
                path: /health
                port: 5000
            initialDelaySeconds: 90
            periodSeconds: 10
        resources:
            limits:
                memory: "200Mi"
                cpu: "1"
            requests:
                memory: "100Mi"
                cpu: "0.5"
