infrastructure/postgres-deployment.yaml
apiVersion:  apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: air-quality-api
  namespace: a-q-api
spec:
  selector:
    matchLabels:
      app: air-quality-api
      tier: postgres
  strategy:
    type: RollingUpdate
    rollingUpdate:
        maxSurge: 2
        maxUnavailable: 1
  template:
    metadata:
      labels:
        app: air-quality-api
        tier: postgres
    spec:
      containers:
      - image: postgres:alpine
        name: postgres_container
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-volume
          mountPath: "/var/lib/postgresql/data"
      volumes:
      - name: postgres-volume
        persistentVolumeClaim:
          claimName: postgres-pv-claim
