infrastructure/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: air-quality-svc
  labels:
    app: air-quality-api
    tier: aq-api
  namespace: a-q-api
spec:
  type: LoadBalancer
  ports:
  - name: tcp-80-5043
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: air-quality-api
    tier: aq-api
