infrastructure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: air-quality-api
  labels:
    app: air-quality-api
    tier: aq-api
spec:
  rules:
  - host: air-quality-api.mycar.co.uk
    http:
      paths:
      - path: /*
        backend:
          service:
            name: air-quality-svc
            port:
              number: 80
